# turtlebot3_term_pj

./: README.markdown  README.md  main_ui.ui
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_term_pj/lib/turtlebot3_term_pj/: patrol_node  teleop_gui  ui_main_node
install/turtlebot3_term_pj/share/turtlebot3_term_pj/: package.bash  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_term_pj/share/turtlebot3_term_pj/launch/: master_launch.py  patrol_launch.py
maps/small60*60/: map.pgm  map.yaml
maps/testmap/: map.pgm  map.yaml
src/bottle_align_action/: CMakeLists.txt  package.xml  setup.py
src/bottle_align_action/action/: BottleAlign.action
src/bottle_align_action/bottle_align_action/: align_bottle_server_v3.py  bottle_align_topic_node.py
src/ros2_camera/src/YOLOv5-ROS/launch/: yolov5s_simple.launch.py
src/ros2_camera/src/YOLOv5-ROS/yolov5_ros/: detected_object_checker.py  main.py
src/ros2_camera/src/bottle_tracker/: package.xml  setup.cfg  setup.py
src/ros2_camera/src/bottle_tracker/bottle_tracker/: camera_lidar_fusion_node.py  camera_lidar_fusion_node_backup.py  lidar_distance_checker.py
src/ros2_camera/src/bottle_tracker/config/: camera_params.yaml
src/turtlebot3_term_pj/: package.xml  setup.cfg  setup.py
src/turtlebot3_term_pj/action/: Patrol.action  TurnToDesk.action
src/turtlebot3_term_pj/launch/: master_launch.py
src/turtlebot3_term_pj/turtlebot3_term_pj/: fake_turn_node.py  fake_yolo_node.py  main.py  main_ui.ui  master.py  master_ui.ui  patrol_node.py  ui_main.py  ui_master.py
src/turtlebot3_term_pj_interfaces/: CMakeLists.txt  package.xml
src/turtlebot3_term_pj_interfaces/action/: Patrol.action
src/turtlebot3_term_pj_interfaces/srv/: TriggerYolo.srv
turtlebot3_term_pj/: main.py  ui_main.py
turtlebot3_term_pj/src/turtlebot3_term_pj/: setup.py
(+3 files in other folders)
